# protein-dpo

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  sample.py  score.py  score_complex.py
example/: fireprot_homologue_free.csv  shehata_all.csv
tests/: conftest.py  test_validation.py
